<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sahil.mathpractice.Addition"
    android:background="#FFFF00">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_wrong"
        android:id="@+id/rightOrWrong"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:id="@+id/plusSign"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number1"
        android:id="@+id/numberOne"
        android:ems="4"
        android:gravity="center"
        android:inputType="number"
        android:layout_alignBaseline="@+id/plusSign"
        android:layout_alignBottom="@id/plusSign"
        android:layout_toLeftOf="@+id/plusSign"
        android:layout_toStartOf="@+id/plusSign"
        tools:ignore="TextViewEdits" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number2"
        android:id="@+id/numberTwo"
        android:ems="4"
        android:gravity="center"
        android:inputType="number"
        android:layout_alignBaseline="@+id/plusSign"
        android:layout_alignBottom="@id/plusSign"
        android:layout_toRightOf="@+id/plusSign"
        android:layout_toEndOf="@+id/plusSign"
        tools:ignore="TextViewEdits" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="6"
        android:gravity="center"
        android:id="@+id/answer"
        android:layout_below="@+id/numberOne"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/hint" />
</RelativeLayout>
