<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/multButton"
        android:layout_alignRight="@+id/multButton"
        android:text="@string/add_button"
        android:id="@+id/addButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:textColor="#000000"
        android:background="#FFFF00" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/multButton"
        android:layout_alignRight="@+id/multButton"
        android:text="@string/sub_button"
        android:id="@+id/subButton"
        android:layout_below="@+id/addButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:background="#0070C0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mult_button"
        android:id="@+id/multButton"
        android:layout_below="@+id/subButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:background="#FF0000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/multButton"
        android:layout_alignRight="@+id/multButton"
        android:text="@string/div_button"
        android:id="@+id/divButton"
        android:layout_below="@+id/multButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#00B050"
        android:textColor="#000000" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mathpractice"
        android:src="@drawable/mathpractice"
        android:layout_marginTop="0dp" />
</RelativeLayout>
